--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
+    "start": "gatsby serve",
     "develop": "gatsby develop",
     "format":
       "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
